--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -3,3 +3,42 @@ body {
 }
 
 /* Start coding here */
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+.container {
+  background-color: black;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.banner-box {
+  border: 5px solid white;
+  background-color: white;
+  color: white;
+  font-size: x-large;
+  position: relative;
+}
+
+div > img {
+  border-radius: 10px;
+}
+
+div > .text-box-top {
+  position: absolute;
+  background-color: rgba(93, 93, 93, 0.7);
+  bottom: 240px;
+  left: 527px;
+  padding: 7.5px 15px;
+}
+
+div > .text-box-bottom {
+  position: absolute;
+  bottom: 15px;
+  left: 5px;
+}
