--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -27,6 +27,16 @@ body {
 
 div > img {
   border-radius: 10px;
+  z-index: 1;
+}
+
+.gradient {
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(#ffffff00, #000000e5);
+  z-index: 2;
+  position: absolute;
+  bottom: 7px;
 }
 
 div > .text-box-top {
@@ -35,10 +45,12 @@ div > .text-box-top {
   bottom: 240px;
   left: 527px;
   padding: 7.5px 15px;
+  z-index: 3;
 }
 
 div > .text-box-bottom {
   position: absolute;
   bottom: 15px;
   left: 5px;
+  z-index: 3;
 }
