--- a/ex2-techup-chatroom/style.css
+++ b/ex2-techup-chatroom/style.css
@@ -1,1 +1,59 @@
 /* Start coding here */
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
+.chatroom-header {
+  background-color: grey;
+  padding: 10px;
+  color: white;
+}
+
+.bubble {
+  background-color: rgb(65, 173, 65);
+  padding: 7.5px 15px;
+  border-radius: 18px;
+  margin: 5px;
+  width: 150px;
+  font-size: small;
+}
+
+.chatroom-sender-chat2 {
+  background-color: lightgray;
+}
+
+.close-button {
+  position: absolute;
+  top: 42px;
+  right: 7px;
+  color: white;
+  background-color: darkgray;
+  border-radius: 100%;
+  width: 15px;
+  text-align: center;
+}
+
+.chatroom-sender {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  position: relative;
+}
+
+.chatroom-receiver {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.chatroom-receiver > .bubble {
+  background-color: rgb(124, 122, 122);
+}
