--- a/ex2-techup-chatroom/style.css
+++ b/ex2-techup-chatroom/style.css
@@ -1,1 +1,110 @@
 /* Start coding here */
+* {
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
+
+.container {
+  height: 100vh;
+  background-color: white;
+}
+
+.nav {
+  background-color: grey;
+  color: white;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.nav p {
+  color: white;
+  font-size: 30px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.window {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  position: relative;
+}
+
+.question {
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.answer {
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.item-1 {
+  background-color: #808080;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+
+.item-2 {
+  background-color: #808080;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 60px;
+}
+
+.item-4 {
+  background-color: #09be09;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  margin-top: 15px;
+  margin-right: 20px;
+  margin-bottom: 15px;
+}
+
+.item-5 {
+  background-color: #e7e3e3;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-bottom: 15px;
+  position: relative;
+}
+
+.item-6 {
+  background-color: #09be09;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
+  margin-right: 20px;
+}
+
+p {
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.cross {
+  position: absolute;
+  left: 188px;
+  bottom: 28px;
+}
