--- a/ex1-bubble-tea-shop/style.css
+++ b/ex1-bubble-tea-shop/style.css
@@ -1,5 +1,59 @@
 body {
   font-family: "Kanit";
+  text-align: center;
+  background-color: black;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-/* Start coding here */
+.banner {
+  position: relative;
+  background-color: white;
+  padding: 10px;
+  width: max-content;
+  height: max-content;
+}
+
+.location,
+.tag {
+  z-index: 3;
+  position: absolute;
+  color: white;
+}
+
+.location {
+  bottom: 15px;
+  left: 20px;
+  font-size: x-large;
+}
+
+.tag {
+  background-color: rgba(0, 0, 0, 0.5);
+  font-size: 1.8rem;
+  padding: 5px 20px;
+  top: 30px;
+  right: 5px;
+}
+
+img {
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.gradient {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  z-index: 2;
+  width: 624px;
+  height: 150px;
+  border-radius: 10px;
+  box-sizing: border-box;
+  background-image: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 1),
+    rgba(255, 255, 255, 0)
+  );
+}
